# dde-control-center

./: .gerrit_sources_list  CMakeLists.txt
plugins/: CMakeLists.txt
plugins/mouse/: CMakeLists.txt
plugins/mouse/viewer/: generalsettingwidget.cpp  mousemodule.cpp  mousemodule.h  mousesettingwidget.cpp  mousewidget.cpp  mousewidget.h  touchpadsettingwidget.cpp  trackpointsettingwidget.cpp
rpm/: dde-control-center.spec
src/frame/: CMakeLists.txt
src/frame/modules/accounts/: accountsworker.cpp  accountsworker.h  user.h  usermodel.cpp  usermodel.h
src/frame/modules/display/: displayworker.cpp
src/frame/window/: insertplugin.cpp  insertplugin.h  mainwindow.cpp  mainwindow.h
src/frame/window/modules/accounts/: accountsdetailwidget.cpp  accountsdetailwidget.h  accountsmodule.cpp  createaccountpage.cpp  createaccountpage.h  modifypasswdpage.cpp  modifypasswdpage.h
src/frame/window/modules/display/: displaymodule.cpp  displaywidget.cpp  multiscreenwidget.cpp  secondaryscreendialog.cpp  secondaryscreendialog.h
src/frame/window/modules/mouse/: generalsettingwidget.cpp
src/frame/window/modules/network/: networkmodule.cpp  wiredpage.cpp  wirelesspage.cpp  wirelesspage.h
src/frame/window/modules/power/: powermodule.cpp  powerwidget.cpp  powerwidget.h  useelectricwidget.cpp
src/frame/window/modules/sound/: soundeffectspage.cpp
src/frame/window/modules/systeminfo/: nativeinfowidget.cpp
src/frame/window/search/: searchwidget.cpp
